fix background color scrollbar

--- a/Front/app/styles/ui/_grid.less
+++ b/Front/app/styles/ui/_grid.less
@@ -252,7 +252,8 @@
 .grid-view ::-webkit-scrollbar {
   width: 1.2em;
   height: 1.2em;
-  background: #302e2e;
+  //background: #302e2e;
+  background: #ccc;
 }
 
 #applyButton{
